Finally done with Labv 3

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 
         <p>Question 5, Knowledge. <br> Do I know what I am doing?</p>
 
+        <p>Question 6, Art. <br> How many tattoo's do i have?</p>
+
+        <p>Question 7, Sound. <br> What instruments can I play?</p>
+
         <script src="app.js"></script>
     </body>
 
